base.core/src/main/java/eapli/base/surveys/antlr/ProjectParser.java
package eapli.base.surveys.antlr;
// Generated from C:/Users/Andr�/Documents/Documents/ISEP/LAPR4/Docs/LPROG\Project.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProjectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT=40, OBLIGATORINESS=41, DATE=42, NEWLINE=43, ID=44, FREE_TEXT=45;
	public static final int
		RULE_prog = 0, RULE_id = 1, RULE_date = 2, RULE_criteria = 3, RULE_criterias = 4, 
		RULE_criteriaType = 5, RULE_combinationType = 6, RULE_survey = 7, RULE_welcome = 8, 
		RULE_listOfSections = 9, RULE_sections = 10, RULE_questions = 11, RULE_question = 12, 
		RULE_instruction = 13, RULE_answers = 14, RULE_questionType = 15, RULE_gender = 16, 
		RULE_condition = 17, RULE_end = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "id", "date", "criteria", "criterias", "criteriaType", "combinationType", 
			"survey", "welcome", "listOfSections", "sections", "questions", "question", 
			"instruction", "answers", "questionType", "gender", "condition", "end"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ID:'", "'Date: '", "' - '", "'Criteria: '", "'Bought- '", "'Brand- '", 
			"'Age > '", "'Age < '", "'Age['", "'-'", "']'", "'Gender- '", "'[AND]'", 
			"'[OR]'", "'Survey Questionnaire -'", "'Welcome Message -'", "'List of sections:'", 
			"'[Sections]'", "'Section- '", "'Question-'", "'*'", "'Obligatoriness:'", 
			"'('", "')'", "'Answers:'", "'-Type= Free-text'", "'-Type= Single-choice'", 
			"'-Type= Multiple-choice'", "'-Type= Numeric'", "'-Type= Yes/No'", "'-Type= Scaling'", 
			"'-Type= Sorting'", "'Male'", "'Female'", "'Undefined'", "'(Section '", 
			"'|Question '", "'|Answer:'", "'End'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT", "OBLIGATORINESS", "DATE", "NEWLINE", "ID", 
			"FREE_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Project.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ProjectParser.ID, 0); }
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(41);
			match(ID);
			setState(42);
			match(NEWLINE);
			setState(43);
			date();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public List<TerminalNode> DATE() { return getTokens(ProjectParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(ProjectParser.DATE, i);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public CriteriaContext criteria() {
			return getRuleContext(CriteriaContext.class,0);
		}
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__1);
			setState(46);
			match(DATE);
			setState(47);
			match(T__2);
			setState(48);
			match(DATE);
			setState(49);
			match(NEWLINE);
			setState(50);
			criteria();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriteriaContext extends ParserRuleContext {
		public CriteriasContext criterias() {
			return getRuleContext(CriteriasContext.class,0);
		}
		public CriteriaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criteria; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteria(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriteriaContext criteria() throws RecognitionException {
		CriteriaContext _localctx = new CriteriaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_criteria);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__3);
			setState(53);
			criterias();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriteriasContext extends ParserRuleContext {
		public CriteriasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criterias; }
	 
		public CriteriasContext() { }
		public void copyFrom(CriteriasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SimpleCriteriaContext extends CriteriasContext {
		public CriteriaTypeContext criteriaType() {
			return getRuleContext(CriteriaTypeContext.class,0);
		}
		public SurveyContext survey() {
			return getRuleContext(SurveyContext.class,0);
		}
		public SimpleCriteriaContext(CriteriasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterSimpleCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitSimpleCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitSimpleCriteria(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CombinedCriteriaContext extends CriteriasContext {
		public List<CriteriaTypeContext> criteriaType() {
			return getRuleContexts(CriteriaTypeContext.class);
		}
		public CriteriaTypeContext criteriaType(int i) {
			return getRuleContext(CriteriaTypeContext.class,i);
		}
		public CombinationTypeContext combinationType() {
			return getRuleContext(CombinationTypeContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public SurveyContext survey() {
			return getRuleContext(SurveyContext.class,0);
		}
		public CombinedCriteriaContext(CriteriasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCombinedCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCombinedCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCombinedCriteria(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriteriasContext criterias() throws RecognitionException {
		CriteriasContext _localctx = new CriteriasContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_criterias);
		try {
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new SimpleCriteriaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				criteriaType();
				setState(56);
				survey();
				}
				break;
			case 2:
				_localctx = new CombinedCriteriaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				criteriaType();
				setState(59);
				combinationType();
				setState(60);
				match(NEWLINE);
				setState(61);
				criteriaType();
				setState(62);
				survey();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriteriaTypeContext extends ParserRuleContext {
		public CriteriaTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criteriaType; }
	 
		public CriteriaTypeContext() { }
		public void copyFrom(CriteriaTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CriteriaGenderContext extends CriteriaTypeContext {
		public GenderContext gender() {
			return getRuleContext(GenderContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public CriteriaGenderContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaGender(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaGender(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaGender(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CriteriaProductBoughtContext extends CriteriaTypeContext {
		public List<TerminalNode> DATE() { return getTokens(ProjectParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(ProjectParser.DATE, i);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public List<TerminalNode> ID() { return getTokens(ProjectParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProjectParser.ID, i);
		}
		public CriteriaProductBoughtContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaProductBought(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaProductBought(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaProductBought(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CriteriaAgeMoreThanContext extends CriteriaTypeContext {
		public TerminalNode INT() { return getToken(ProjectParser.INT, 0); }
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public CriteriaAgeMoreThanContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaAgeMoreThan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaAgeMoreThan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaAgeMoreThan(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CriteriaAgeIntervalContext extends CriteriaTypeContext {
		public List<TerminalNode> INT() { return getTokens(ProjectParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ProjectParser.INT, i);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public CriteriaAgeIntervalContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaAgeInterval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaAgeInterval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaAgeInterval(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CriteriaAgeLessThanContext extends CriteriaTypeContext {
		public TerminalNode INT() { return getToken(ProjectParser.INT, 0); }
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public CriteriaAgeLessThanContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaAgeLessThan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaAgeLessThan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaAgeLessThan(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CriteriaBrandBoughtContext extends CriteriaTypeContext {
		public TerminalNode FREE_TEXT() { return getToken(ProjectParser.FREE_TEXT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ProjectParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProjectParser.NEWLINE, i);
		}
		public List<TerminalNode> DATE() { return getTokens(ProjectParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(ProjectParser.DATE, i);
		}
		public CriteriaBrandBoughtContext(CriteriaTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCriteriaBrandBought(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCriteriaBrandBought(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCriteriaBrandBought(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriteriaTypeContext criteriaType() throws RecognitionException {
		CriteriaTypeContext _localctx = new CriteriaTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_criteriaType);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new CriteriaProductBoughtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(T__4);
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67);
					match(ID);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(72);
				match(DATE);
				setState(73);
				match(T__2);
				setState(74);
				match(DATE);
				setState(75);
				match(NEWLINE);
				}
				break;
			case T__5:
				_localctx = new CriteriaBrandBoughtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(T__5);
				setState(77);
				match(FREE_TEXT);
				setState(78);
				match(NEWLINE);
				setState(79);
				match(DATE);
				setState(80);
				match(T__2);
				setState(81);
				match(DATE);
				setState(82);
				match(NEWLINE);
				}
				break;
			case T__6:
				_localctx = new CriteriaAgeMoreThanContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(T__6);
				setState(84);
				match(INT);
				setState(85);
				match(NEWLINE);
				}
				break;
			case T__7:
				_localctx = new CriteriaAgeLessThanContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				match(T__7);
				setState(87);
				match(INT);
				setState(88);
				match(NEWLINE);
				}
				break;
			case T__8:
				_localctx = new CriteriaAgeIntervalContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				match(T__8);
				setState(90);
				match(INT);
				setState(91);
				match(T__9);
				setState(92);
				match(INT);
				setState(93);
				match(T__10);
				setState(94);
				match(NEWLINE);
				}
				break;
			case T__11:
				_localctx = new CriteriaGenderContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				match(T__11);
				setState(96);
				gender();
				setState(97);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CombinationTypeContext extends ParserRuleContext {
		public CombinationTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_combinationType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterCombinationType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitCombinationType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitCombinationType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CombinationTypeContext combinationType() throws RecognitionException {
		CombinationTypeContext _localctx = new CombinationTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_combinationType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !(_la==T__12 || _la==T__13) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SurveyContext extends ParserRuleContext {
		public TerminalNode FREE_TEXT() { return getToken(ProjectParser.FREE_TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public WelcomeContext welcome() {
			return getRuleContext(WelcomeContext.class,0);
		}
		public SurveyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_survey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterSurvey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitSurvey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitSurvey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurveyContext survey() throws RecognitionException {
		SurveyContext _localctx = new SurveyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_survey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__14);
			setState(104);
			match(FREE_TEXT);
			setState(105);
			match(NEWLINE);
			setState(106);
			welcome();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WelcomeContext extends ParserRuleContext {
		public TerminalNode FREE_TEXT() { return getToken(ProjectParser.FREE_TEXT, 0); }
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public ListOfSectionsContext listOfSections() {
			return getRuleContext(ListOfSectionsContext.class,0);
		}
		public WelcomeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welcome; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterWelcome(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitWelcome(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitWelcome(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WelcomeContext welcome() throws RecognitionException {
		WelcomeContext _localctx = new WelcomeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_welcome);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__15);
			setState(109);
			match(FREE_TEXT);
			setState(110);
			match(NEWLINE);
			setState(111);
			listOfSections();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfSectionsContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ProjectParser.NEWLINE, 0); }
		public SectionsContext sections() {
			return getRuleContext(SectionsContext.class,0);
		}
		public ListOfSectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfSections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).enterListOfSections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectListener ) ((ProjectListener)listener).exitListOfSections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjectVisitor ) return ((ProjectVisitor<? extends T>)visitor).visitListOfSections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOfSectionsContext listOfSections() throws RecognitionException {
		ListOfSectionsContext _localctx = new ListOfSectionsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listOfSections);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__16);
			setState(114);
			match(NEWLINE);
			setState(115);
			sections();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
